--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -323,6 +323,7 @@
     </div>
   </div>
 </main>
+<app-card-component></app-card-component>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
