--- a/src/app/card-component/card-component.component.html
+++ b/src/app/card-component/card-component.component.html
@@ -6,6 +6,6 @@
       <p>{{ cardContent }}</p>
     </div>
     <div class="card-footer">
-      <ng-content></ng-content> 
+      <ng-content>utru</ng-content> 
     </div>
   </div>
